Implemented home page     Implemented home page route, data function and handlebars

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,3 +93,17 @@ p a {
 p a:hover {
     text-decoration: underline;
 }
+
+#contentContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+#userFeed {
+    /* Assuming you want the feed to take more space */
+    flex: 3;
+}
+
+#followingList {
+    flex: 1;
+}
