--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,5 +1,5 @@
 <!-- Search Reviews -->
 <div id="reviewSearch">
-    <input type="text" placeholder="Search businesses or reviews..." id="reviewSearchBar">
+    <input type="text" placeholder="Search businesses ...." id="reviewSearchBar">
     <button>Search</button>
 </div>
