--- a/views/partials/userProfile.handlebars
+++ b/views/partials/userProfile.handlebars
@@ -1,7 +1,7 @@
 <div id="user-profile-handle-bar" class="class-handlebars">
   <h1>User Profile</h1>
   <div class="user-info">
-    <p>Name: {{data.user.firstName}}</p>
+    <p>Name: {{username}}</p>
   </div>
   <form action="/login" method="get">
   <button type="submit" id="login-screen">Login</button>
