--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,15 @@
 <div id="handlebars-container">
     This is home
 
-    <div>
+    <div class="user-profile">
         {{> userProfile }}
     </div>
 
-    <div>
+    <div class="following-list">
         {{> followingList }}
     </div>
 
-    <div>
+    <div class="feed">
         {{> feed }}
     </div>
     
