--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@ TODO place holder
     <form id ="login-form" action="/login" method="post">
     
         <label for="contactEmailInput">Email Address</label>
-        <input type="email" id="contactEmailInput" name="contactEmailInput" required>
+        <input type="email" id="contactEmailInput" name="contactEmailInput" placeholder="Enter email-Id" required>
 
         {{#if contactEmailErr}}
             <div id="contactEmailError" class="errorMessage">
@@ -17,7 +17,7 @@ TODO place holder
         {{/if}}
 
         <label for="passwordInput">Password</label>
-        <input type="password" id="passwordInput" name="passwordInput" required>
+        <input type="password" id="passwordInput" name="passwordInput" placeholder="Enter password">
 
         {{#if passwordErr}}
             <div id="passwordError" class="errorMessage">
@@ -36,5 +36,6 @@ TODO place holder
 
     </form>
 
-    <p id="registerLink"><a href="/register">Click here to register!</a></p>
+   
 </main>
+ <p id="registerLink"><a href="/register">Click here to register!</a></p>
