--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,10 +4,10 @@ registration handelbars
 
 --}}
 
-<main>
+<main class="register">
     <form id="registration-form" action="/register" method="post">
         <label for="firstNameInput">First Name</label>
-        <input type="text" id="firstNameInput" name="firstNameInput" value="{{firstNameDef}}" required>
+        <input type="text" id="firstNameInput" name="firstNameInput" value="{{firstNameDef}}">
 
         {{#if firstNameErr}}
             <div id="firstNameError" class="errorMessage">
