--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div id="handlebars-container">
     This is home
-
+</div>
     <div class="user-profile">
         {{> userProfile }}
     </div>
@@ -15,5 +15,5 @@
     
     
 
-</div>
-<a href="#" id="refresh-link">Refresh Content</a>
+<button class="refershbutton">
+    <a href="#" id="refresh-link">Refresh Content</a></button>
