--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,22 @@
-<div id="handlebars-container">
-    This is home
-</div>
-    <div class="user-profile">
-        {{> userProfile }}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+            {{> searchBar}}
+        </div>
+        <div class="col-md-5"></div>
+        <div class="col-md-3">
+            {{> userProfile}}
+        </div>
     </div>
 
-    <div class="following-list">
-        {{> followingList }}
+    <div class="row">
+        <div id="dynamicContentArea" class="col-md-9">
+            {{> feed}}
+        </div>
+        <div class="col-md-3">
+            {{> followingList}}
+        </div>
     </div>
-
-    <div class="feed">
-        {{> feed }}
-    </div>
-    <div class=" search-bar">
-     <label class="business-search-bar"for ="search">Search:</label>
-        <input id="search" type="text" name="searchTerm" placeholder="Search for business..." value="{{search_term_value}}">
-        <button type="submit">Search</button>
+   
 </div>
-<button class="refershbutton">
-    <a href="#" id="refresh-link">Refresh Content</a></button>
