--- a/views/partials/userDetail.handlebars
+++ b/views/partials/userDetail.handlebars
@@ -4,7 +4,7 @@
     <p>Name: {{user.firstName}}</p>
     <p>UserName: {{user.username}}</p>
   </div>
-  <form action="/login" method="get">
-  <button type="submit" id="login-screen">ADD USER</button>
+  <form action="/addFollowing" admin-user-id ="{{adminUser.userId}}" data-user-id="{{user.userId}}" method="post">
+  <button type="submit" id="add-following-button">Follow User</button>
    </form>
 </div>
