--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -28,8 +28,7 @@
   </div>
  --}} 
 
-<script id="feed-partial" type="text/x-handlebars-template">
-      {{#each reviews}}
-        {{> review this }}
-      {{/each}}
-    </script>
+<div id="reviewsFeed" class="mt-4">
+  this is the feed
+    <!-- Reviews will be dynamically loaded here -->
+</div>
