--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,8 +11,11 @@
     </div>
 
     <div class="row">
-        <div id="dynamicContentArea" class="col-md-9">
+        <div class="col-md-6">
             {{> feed}}
+        </div>
+        <div class="col-md-3">
+            {{> userProfileFull}}
         </div>
         <div class="col-md-3">
             {{> followingList}}
