--- a/views/partials/userProfile.handlebars
+++ b/views/partials/userProfile.handlebars
@@ -8,6 +8,7 @@
 
         <!-- User Info -->
         <div class="user-info">
+            <div id="user-profile-hidden-id" hidden>{{user.userId}}</div>
             <div>{{user.firstName}} {{user.lastName}}</div>
             <div>Following: {{user.following}} | Followers: {{user.followers}}</div>
         </div>
@@ -15,8 +16,13 @@
 
     <!-- Buttons -->
     <div class="mt-3">
-        <button class="btn btn-primary btn-sm mr-2">Edit User Info</button>
-        <button class="btn btn-secondary btn-sm">Log Off</button>
+        <form action= "/updateUser/{{user.userId}}" method="GET">
+        <button type="submit" id="update-user-button" class="btn btn-primary btn-sm mr-2">Edit User Info</button>
+        </form>
+        <form action="/logout" method="GET">
+        <button type="submit" id="logout-button" class="btn btn-primary btn-sm mr-3">Log Off</button>
+        </form>
+      
     </div>
 </div>
 
