--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,12 @@
+<!-- Back to Home Link -->
+<a href="/home" class="back-to-home-link">Home</a>  
 <div id="homePage">
     <!-- Search Reviews -->
+
+    <div id="addReviewContainer">
+        <a href="/review/createReview" class="addReviewButton">Add Review</a>
+    </div>
+
     {{> search}}
 
     <div id="contentContainer">
