--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -6,6 +6,7 @@ based on the specs.
 
 
 --}}
-<p>Welcome {{firstName}} {{lastName}}, the time is now: {{currentTime}}. You get super secret admin access since you are an admin. Remember, with great power comes great responsibility!!</p>
+<p>Welcome {{firstName}} {{lastName}}, the time is now: {{currentTime}}. You get super secret admin access since you are
+    an admin. Remember, with great power comes great responsibility!!</p>
 <a href="/protected">Protected Page</a>
 <a href="/logout">Logout</a>
