--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     min-height: 100vh;
 }
-header {
+/* header {
     background: linear-gradient(to right, #007bff, #ff1493); 
     top: 0;
     color: white; 
@@ -18,7 +18,38 @@ header {
     position: fixed;
     width: 100%;
     
+} */
+header {
+    background: linear-gradient(to right, #007bff, #ff1493); 
+    top: 0;
+    color: white; 
+    text-align: center;
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.header-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.header-link {
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    margin: 0 10px;
+}
+
+.header-link:hover {
+    text-decoration: underline;
+}
+
 
 footer {
     background: linear-gradient(to right, #008080, #ffa500);
@@ -124,7 +155,7 @@ p a:hover {
 
 #addReviewContainer {
     position: absolute;
-    top: 40px;
+    top: 75px;
     right: 10px;
 }
 
