--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <header>ReviewSphere!! Authentication Module</header>
+    {{header}}
 
     <h1>{{{heading1}}}</h1>
         {{{body}}}  
     <footer>
-        Team ReviewSphere
+        ReviewSphere
     </footer>
 
     <script src="/public/js/basicfunctionality.js"></script>
