--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,31 +4,38 @@ login form handlebar template have to modify to login still
 TODO place holder
 
 --}}
+<header>
+    {{!-- <div class="header-links"> --}}
+
+        Welcome to ReviewSphere 
+
+        {{!-- </div> --}}
+</header>
 <main>
-    <form id ="login-form" action="/login" method="post">
-    
+    <form id="login-form" action="/login" method="post">
+
         <label for="contactEmailInput">Email Address</label>
         <input type="email" id="contactEmailInput" name="contactEmailInput" required>
 
         {{#if contactEmailErr}}
-            <div id="contactEmailError" class="errorMessage">
-                {{contactEmailErr}}
-            </div>
+        <div id="contactEmailError" class="errorMessage">
+            {{contactEmailErr}}
+        </div>
         {{/if}}
 
         <label for="passwordInput">Password</label>
         <input type="password" id="passwordInput" name="passwordInput" required>
 
         {{#if passwordErr}}
-            <div id="passwordError" class="errorMessage">
-                {{passwordErr}}
-            </div>
+        <div id="passwordError" class="errorMessage">
+            {{passwordErr}}
+        </div>
         {{/if}}
-        
+
         {{#if loginError}}
-            <div id="bothError" class="errorMessage">
-                {{loginError}}
-            </div>
+        <div id="bothError" class="errorMessage">
+            {{loginError}}
+        </div>
         {{/if}}
 
         <button type="submit">Login</button>
