--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,8 +3,11 @@
 registration handelbars
 
 --}}
-
+<header>
+        Welcome to ReviewSphere
+    </header>
 <main>
+    
     <form id="registration-form" action="/register" method="post">
         <label for="firstNameInput">First Name</label>
         <input type="text" id="firstNameInput" name="firstNameInput" value="{{firstNameDef}}" required>
