Implemented Update Profile feature

--- a/views/createReview.handlebars
+++ b/views/createReview.handlebars
@@ -1,3 +1,14 @@
+<header>
+    <div class="header-links">
+        <a href="/home" class="header-link">Home</a>
+        <a href="/updateProfile" class="header-link">Update Profile</a>
+        {{!-- <span>ReviewSphere</span> --}}
+        <a href="/review/createReview" class="header-link">Add Review</a>
+        <a href="/review/getMyReview/{{this._id}}" class="header-link"> My Reviews </a>
+        {{!-- <a href="/myReviews" class="header-link">My Reviews</a> --}}
+        <a href="/logout" class="header-link">Log Out</a>
+    </div>
+</header>
 <main>  
     <form action="/review/createReview" method="POST" name="reviewForm" id="reviewForm">
         <!-- Categories Dropdown -->
