--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,12 +27,13 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Top Reviews <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Categories</a>
+                        <a class="nav-link" href="/home">Home</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/review/createReview">Create New Review <span class="sr-only">(current)</span></a>
+                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
