--- a/views/partials/feed.handlebars
+++ b/views/partials/feed.handlebars
@@ -29,6 +29,6 @@
  --}} 
 
 <div id="reviewsFeed" class="mt-4">
-  this is the feed
+  <h3>Feed</h3>
     <!-- Reviews will be dynamically loaded here -->
 </div>
