--- a/views/createBusiness.handlebars
+++ b/views/createBusiness.handlebars
@@ -25,8 +25,8 @@
 
         <!-- Submit Button -->
         <button type="submit">Create Business</button>
-        <p id="error-message" class="error">Input can't be empty or just spaces</p>
-        <p class="error-message hidden"></p>
+        {{!-- <p id="error-message" class="error">Input can't be empty or just spaces</p>
+        <p class="error-message hidden"></p> --}}
     </form>
 </main>
 <script src="/public/js/reviewValidation.js"></script>
