--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="/home">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/review/createReview">Create New Review <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/review/createReview">CreateReview <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/review/getMyReview">MyReviews<span class="sr-only">(current)</span></a>
                     </li>
                     
                     <li class="nav-item">
